seperate recipes to different pages

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="recipes/chickensalad.html">Chicken Salad Recipe</a></li>
-            <li><a href="recipes/chickensalad.html">King Prawn and Scallop in Ginger Butter</a></li>
-            <li><a href="recipes/chickensalad.html">Pasta e Fagioli (Pasta and Beans)</a></li>
+            <li><a href="recipes/kpsgb.html">King Prawn and Scallop in Ginger Butter</a></li>
+            <li><a href="recipes/pef.html">Pasta e Fagioli (Pasta and Beans)</a></li>
         </ul>
     </body>
 
